<resources>
    <string name="app_name">TodoList</string>
    <!-- タスク一覧画面 -->
    <string name="task_list_fragment_title">タスク一覧</string>
    <string name="add_task_fragment_title">タスク追加</string>
    <string name="deadline_text_format">%1$d/%2$d/%3$d</string>

    <!-- タスク追加画面 / 編集画面  -->
    <string name="task_add_title">タスク追加</string>
    <string name="task_title_hint">タイトル</string>
    <string name="task_title_helper">※必須</string>
    <string name="task_description_hint">説明</string>
    <string name="task_deadline_hint">期限</string>
    <string name="task_add_button_text">タスクを追加</string>
    <string name="task_edit_button_text">タスクを保存</string>

    <!-- タスク削除確認ダイアログ    -->
    <string name="task_delete_dialog_message">タスクを削除しますか？</string>
    <string name="task_delete_dialog_positive_button_text">削除</string>
    <string name="task_delete_dialog_negative_button_text">キャンセル</string>

</resources>
